add: image and card layout

--- a/index.html
+++ b/index.html
@@ -7,5 +7,93 @@
     <link rel="stylesheet" href="/styles.css" />
     <title>Dazz-O-Mania</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header flex-row wrap">
+      <div class="navbar-section">
+        <i class="fas fa-bars fa-lg primary-text myhamburger"></i>
+
+        <a href="#" class="navbar-logo no-underline">
+          <img class="logo-img" src="/images/logo.svg" alt="dazzle UI" />
+          <span class="primary-text">Dazz</span>
+          <span class="secondary-text">-O-</span>
+          <span class="primary-text">Mania</span>
+        </a>
+
+        <a href="#" class="navbar-link ml-2">Home</a>
+      </div>
+
+      <div class="navbar-section">
+        <div class="navbar-icon">
+          <a class="navbar-icon-link flex-column-center" href="#">
+            <i class="fas fa-user-alt"></i>
+            <span class="navbar-icon-text">Login</span>
+          </a>
+        </div>
+
+        <div class="navbar-icon">
+          <a class="navbar-icon-link flex-column-center" href="#">
+            <i class="fa-solid fa-chart-line"></i>
+            <span class="navbar-icon-text">LeaderBoard</span>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <img class="home-img img-responsive" src="/images/background-9.jpg" />
+      </section>
+      <section class="flex-row">
+        <div class="card-vertical card-shadow">
+          <img class="card-img-vertical" src="/images/jug-planter.jpg" />
+          <div class="card-details text-center">
+            <div class="title">Who am I ?</div>
+            <p class="subtitle my-0p5">
+              You have to guess who is in the image.
+            </p>
+          </div>
+          <button class="plain-button card-button mt-0p5">Play Now</button>
+        </div>
+        <div class="card-vertical card-shadow">
+          <img class="card-img-vertical" src="/images/jug-planter.jpg" />
+          <div class="card-details text-center">
+            <div class="title">Clay Craft</div>
+            <p class="subtitle my-0p5">signature round bottle</p>
+          </div>
+          <button class="plain-button card-button mt-0p5">Play Now</button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>
+        <small
+          >Made with <span class="secondary-text">&lt;/&gt;</span> by Apurva
+          Sawant</small
+        >
+      </p>
+      <p><small>© 2022 Dazzle Designs</small></p>
+      <a
+        class="link m-1"
+        target="_blank"
+        href="https://github.com/ApuvaSawant11"
+      >
+        <i class="fab fa-github" aria-hidden="true"></i>
+      </a>
+      <a
+        class="link m-1"
+        target="_blank"
+        href="https://twitter.com/ApurvaSawant11"
+      >
+        <i class="fab fa-twitter" aria-hidden="true"></i>
+      </a>
+      <a
+        class="link m-1"
+        target="_blank"
+        href="https://www.linkedin.com/in/apurvasawant11"
+      >
+        <i class="fab fa-linkedin" aria-hidden="true"></i>
+      </a>
+    </footer>
+  </body>
 </html>
