add: quiz image

--- a/index.html
+++ b/index.html
@@ -40,60 +40,75 @@
     </header>
 
     <main>
-      <section>
-        <img class="home-img img-responsive" src="/images/background-9.jpg" />
-      </section>
-      <section class="flex-row">
-        <div class="card-vertical card-shadow">
-          <img class="card-img-vertical" src="/images/jug-planter.jpg" />
-          <div class="card-details text-center">
-            <div class="title">Who am I ?</div>
-            <p class="subtitle my-0p5">
-              You have to guess who is in the image.
-            </p>
-          </div>
-          <button class="plain-button card-button mt-0p5">Play Now</button>
+      <section
+        class="section-intro flex-row-center pb-2p5 border-bottom-1"
+      >
+        <div class="section-text pl-2">
+          <h2 class="mb-2">Answer fun questions and test your knowledge!</h2>
+          <a href="#explore" class="button primary explore-btn"
+            >Explore Quizzes</a
+          >
         </div>
-        <div class="card-vertical card-shadow">
-          <img class="card-img-vertical" src="/images/jug-planter.jpg" />
-          <div class="card-details text-center">
-            <div class="title">Clay Craft</div>
-            <p class="subtitle my-0p5">signature round bottle</p>
+        <img class="home-img img-responsive" src="/images/37561.jpg" />
+      </section>
+      <section id="explore">
+        <h2 class="text-center">Quizzes</h2>
+        <div class="flex-row-center gap-2 mt-2">
+          <div class="card-vertical card-shadow flex-column-center text-center">
+            <img class="card-img-vertical" src="/images/question-mark-3.jpg" />
+            <div class="card-details p-1">
+              <div class="title">Anything Random!</div>
+              <p class="subtitle my-0p5">
+                Let's test your knowledge on random things!
+              </p>
+            </div>
+            <a href="pages/rules.html" class="button button-anchor mt-0p5"
+              >Play Now</a
+            >
           </div>
-          <button class="plain-button card-button mt-0p5">Play Now</button>
+
+          <div class="card-vertical card-shadow flex-column-center text-center">
+            <img
+              class="card-img-vertical img-responsive"
+              src="/images/question-mark-2.jpg"
+            />
+            <div class="card-details p-1">
+              <div class="title">Who am I ?</div>
+              <p class="subtitle my-0p5">
+                You have to guess who is in the image.
+              </p>
+            </div>
+            <a href="pages/rules.html" class="button button-anchor mt-0p5"
+              >Play Now</a
+            >
+          </div>
         </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="text-center mt-2 p-1p5">
       <p>
-        <small
-          >Made with <span class="secondary-text">&lt;/&gt;</span> by Apurva
-          Sawant</small
-        >
+        Made with <span class="secondary-text">&lt;/&gt;</span> by Apurva Sawant
       </p>
-      <p><small>© 2022 Dazzle Designs</small></p>
+      <p>© 2022 Dazzle Designs</p>
       <a
-        class="link m-1"
+        href="https://github.com/ApurvaSawant11/Dazzle-UI-Components"
         target="_blank"
-        href="https://github.com/ApuvaSawant11"
-      >
-        <i class="fab fa-github" aria-hidden="true"></i>
-      </a>
+        class="primary-text p-0p5 text-md"
+        ><i class="fab fa-github footer-icon"></i
+      ></a>
       <a
-        class="link m-1"
+        href="https://www.twitter.com/ApurvaSawant11"
         target="_blank"
-        href="https://twitter.com/ApurvaSawant11"
-      >
-        <i class="fab fa-twitter" aria-hidden="true"></i>
-      </a>
+        class="primary-text p-0p5 text-md"
+        ><i class="fab fa-twitter footer-icon"></i
+      ></a>
       <a
-        class="link m-1"
+        href="https://www.linkedin.com/in/apurvasawant11/"
         target="_blank"
-        href="https://www.linkedin.com/in/apurvasawant11"
-      >
-        <i class="fab fa-linkedin" aria-hidden="true"></i>
-      </a>
+        class="primary-text p-0p5 text-md"
+        ><i class="fab fa-linkedin footer-icon"></i
+      ></a>
     </footer>
   </body>
 </html>
