add: login and signup page

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
       <div class="navbar-section">
         <i class="fas fa-bars fa-lg primary-text myhamburger"></i>
 
-        <a href="#" class="navbar-logo no-underline">
+        <a href="/index.html" class="navbar-logo no-underline">
           <img class="logo-img" src="/images/logo.svg" alt="dazzle UI" />
           <span class="primary-text">Dazz</span>
           <span class="secondary-text">-O-</span>
           <span class="primary-text">Mania</span>
         </a>
-
-        <a href="#" class="navbar-link ml-2">Home</a>
       </div>
 
       <div class="navbar-section">
         <div class="navbar-icon">
-          <a class="navbar-icon-link flex-column-center" href="#">
+          <a
+            class="navbar-icon-link flex-column-center"
+            href="/pages/login.html"
+          >
             <i class="fas fa-user-alt"></i>
             <span class="navbar-icon-text">Login</span>
           </a>
@@ -40,9 +41,7 @@
     </header>
 
     <main>
-      <section
-        class="section-intro flex-row-center pb-2p5 border-bottom-1"
-      >
+      <section class="section-intro flex-row-center border-bottom-1">
         <div class="section-text pl-2">
           <h2 class="mb-2">Answer fun questions and test your knowledge!</h2>
           <a href="#explore" class="button primary explore-btn"
@@ -51,7 +50,7 @@
         </div>
         <img class="home-img img-responsive" src="/images/37561.jpg" />
       </section>
-      <section id="explore">
+      <section id="explore" class="mt-2p5">
         <h2 class="text-center">Quizzes</h2>
         <div class="flex-row-center gap-2 mt-2">
           <div class="card-vertical card-shadow flex-column-center text-center">
@@ -62,7 +61,9 @@
                 Let's test your knowledge on random things!
               </p>
             </div>
-            <a href="pages/rules.html" class="button button-anchor mt-0p5"
+            <a
+              href="pages/rules.html"
+              class="button button-anchor border-radius-0 mt-0p5"
               >Play Now</a
             >
           </div>
@@ -92,7 +93,7 @@
       </p>
       <p>© 2022 Dazzle Designs</p>
       <a
-        href="https://github.com/ApurvaSawant11/Dazzle-UI-Components"
+        href="https://github.com/ApurvaSawant11"
         target="_blank"
         class="primary-text p-0p5 text-md"
         ><i class="fab fa-github footer-icon"></i
